--- a/nextjs/フォントの設定について.md
+++ b/nextjs/フォントの設定について.md
@@ -137,6 +137,29 @@ export const zenMaru = Zen_Maru_Gothic({
 })
 ```
 
----
+## 🔧 Tailwind CSS と組み合わせたい場合
 
-さらに、Tailwind CSSと組み合わせた使い方や、`global.css` に変数を使って定義する方法もご案内できますので、必要であればお知らせください。
+```css
+/* globals.css */
+:root {
+  --font-zenmaru: 'Zen Maru Gothic', sans-serif;
+}
+```
+
+```ts
+// layout.tsx や root.tsx
+<body className={`${zenMaru.variable} font-sans`}>
+```
+
+```js
+// tailwind.config.js
+module.exports = {
+  theme: {
+    extend: {
+      fontFamily: {
+        sans: ['var(--font-zenmaru)', 'sans-serif'],
+      },
+    },
+  },
+}
+```
